plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'sonmoeum'
version = '0.0.1'
description = 'Geumjeong learning project - sonmoeum'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

ext {
	DOTENV_VERSION = '3.2.0'
	SPRING_DOC_VERSION = '2.8.15'
	JJWT_VERSION = '0.13.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "io.jsonwebtoken:jjwt-api:${JJWT_VERSION}"
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly  "io.jsonwebtoken:jjwt-impl:${JJWT_VERSION}"
	runtimeOnly  "io.jsonwebtoken:jjwt-jackson:${JJWT_VERSION}"
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
	
	implementation "io.github.cdimascio:dotenv-java:${DOTENV_VERSION}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-api:${SPRING_DOC_VERSION}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${SPRING_DOC_VERSION}"
	
	testImplementation 'io.rest-assured:rest-assured'
}

tasks.named('test') {
	useJUnitPlatform()
}
